examples/datalog/18_advanced_patterns/22_cube_sim.dl
% Test: OLAP cube simulation
% Expected: Can compute multi-level aggregations
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_cube
.kg use test_cube

+sales[("2024", "Q1", "Widget", 100),
       ("2024", "Q1", "Gadget", 200),
       ("2024", "Q2", "Widget", 150),
       ("2024", "Q2", "Gadget", 250)].

% By year-quarter-product
+cube_yqp(Year, Quarter, Product, <SUM:Amt>) :- sales(Year, Quarter, Product, Amt).

% By year-quarter
+cube_yq(Year, Quarter, <SUM:Amt>) :- sales(Year, Quarter, _, Amt).

% By year-product
+cube_yp(Year, Product, <SUM:Amt>) :- sales(Year, _, Product, Amt).

% By product only
+cube_p(Product, <SUM:Amt>) :- sales(_, _, Product, Amt).

?- cube_yqp(Y, Q, P, S).
?- cube_yq(Y, Q, S).
?- cube_yp(Y, P, S).
?- cube_p(P, S).

.kg use default
.kg drop test_cube
